--- a/styles/main.css
+++ b/styles/main.css
@@ -25,6 +25,8 @@ option:focus-visible {
     outline: unset;
 }
 
+
+
 .container {
     margin: 0 auto;
     padding: 80px 15px 0;
@@ -129,15 +131,28 @@ option:focus-visible {
     display: none;
 }
 
-.add-movie__form-item, 
-.add-movie__form-item input,
-.add-movie__form-item button,
-.add-movie__form-item select {
+.add-movie__form-item {
+    width: 100%;
+    height: 30px; 
+}
+
+.movieTitle, .movieYear,
+.confirm-btn,
+.movie-category,
+.movie-country {
     width: 100%;
     height: 30px;
     box-sizing: border-box;
-
+    border-radius: 5px;
+    border: 1px solid #64748B;
 }
+
+.red {
+    border: 1px solid #EF4444;
+    border-radius: 5px;
+}
+
+
 
 .movie-category:not(:focus), .movie-country:not(:focus) {
     color: gray;
