--- a/styles/main.css
+++ b/styles/main.css
@@ -136,10 +136,12 @@ option:focus-visible {
     height: 30px; 
 }
 
-.movieTitle, .movieYear,
+.movieTitle, 
+.movieYear,
 .confirm-btn,
 .movie-category,
 .movie-country {
+    padding-left: 10px;
     width: 100%;
     height: 30px;
     box-sizing: border-box;
