--- a/styles/main.css
+++ b/styles/main.css
@@ -160,7 +160,7 @@ option:focus-visible {
     color: gray;
 }
 
-.confirm-btn {
+.confirm-btn, .clear-form-btn {
     width: 100%;
     height: 100%;
 
@@ -169,6 +169,11 @@ option:focus-visible {
     border: none;
     color: #FFFFFF;
     cursor: pointer;
+}
+
+.clear-form-btn {
+    background: #E7EAEE;
+    color: #64748B;
 }
 
 
