--- a/styles/main.css
+++ b/styles/main.css
@@ -180,7 +180,7 @@ option:focus-visible {
     right: 0;
 }
 
-.new-item--width0 {
+.new-item--height0 {
     transform: scaleY(0);
     height: 0;
     transition: all 0.2s ease-in-out;
